# magazine-api-hybrid-search

./: .gitignore  Dockerfile  README.md  compose.yml  example.py  generate_dataset.py  index.py  init.sql  main.py  models.py  populate.py  pyproject.toml  requirements.txt
sql_dump/: magazine_content.sql  magazine_info.sql  main.sql
src/: database.py  generate_dataset.py  main.py  models.py
tests/: test_main.py
