[project]
name = "magazine-api-hybrid-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "duckdb>=1.1.3",
    "faker>=35.2.0",
    "fastapi[standard]>=0.115.8",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pytest-asyncio>=0.25.3",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
